# cTools

./: .gitignore  CMakeLists.txt  ConfigAbstract.h  FileHelper.cpp  FileHelper.h  GLVersionChecker.cpp  GLVersionChecker.h  LICENSE  Logger.cpp  Logger.h  README.md  cTools.cpp  cTools.h
.github/workflows/: Build_Linux.yml  Build_Osx.yml  Build_Win.yml  Linux.yml  Osx.yml  Win.yml  codeql-analysis.yml
include/ctools/: ConfigAbstract.h  FileHelper.h  GLVersionChecker.h  Logger.h  cTools.h
src/: ConfigAbstract.cpp  FileHelper.cpp  GLVersionChecker.cpp  GLVersionChecker.h  Logger.cpp  Logger.h  cTools.cpp  cTools.h
tests/: CMakeLists.txt  main.cpp
tests/TestCode/: TestCode.cpp  TestCode.h
tests/TestCode/FileHelper/: Test_FileHelper.cpp  Test_FileHelper.h
tests/TestCode/Logger/: Test_Logger.cpp  Test_Logger.h
tests/TestCode/cTools/: Test_cTools.cpp  Test_cTools.h
